LPS-73946 Set correct alignment for thumbnails

--- a/modules/apps/collaboration/microblogs/microblogs-web/src/main/resources/META-INF/resources/microblogs/css/main.scss
+++ b/modules/apps/collaboration/microblogs/microblogs-web/src/main/resources/META-INF/resources/microblogs/css/main.scss
@@ -313,6 +313,7 @@ $microblogs-border-color: #EAEAEA;
 
 		.thumbnail {
 			margin: 0 5px 0 0;
+			padding: 0;
 
 			img {
 				float: left;
